# MBA-Engenharia_Dados

./: .gitignore  README.md  pyproject.toml
Modulo_1/: pyproject.toml
Modulo_1/scripts/: etl_rais.py  extraction_data_RAIS.py  upload_files.py
Modulo_1/terraform/: crawler_athena.tf  create_job.tf  iam_role.tf  provider.tf  s3_bucket.tf  s3_files.tf
Modulo_2/scripts/: Desafio2.ipynb  desafio2.ipynb
Modulo_2/scripts/.ipynb_checkpoints/: trabalho_pratico2-checkpoint.ipynb
